--- a/Backend/findmypet/build.gradle
+++ b/Backend/findmypet/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.15.2'
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0")
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
